# CPP-Frame-Extraction

./: CMakeLists.txt  README.md  main.cpp
